# upload_s3_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
upload_s3_cli/: generate_config.py  upload_files.py
